# Python3-starter

./: README.md  generate_venv.cmd  pyproject.toml
src/: __init__.py
